# RTv1

./: CMakeLists.txt  Makefile  README.md
include/: parser.h  rtv1.h  structures.h  vector.h
libXml/: add_parse.c  find_functions.c  help_functions.c  parse_objects.c  parse_parametrs.c  parser.c
libvec/: vector.c  vector2.c  vector3.c
scene/: SHIT_AND_CUM.xml  cones.xml  cylinders.xml  one_cylinder.xml  plane_cone.xml  scene1.xml  scene2.xml  sphere.xml  spheres.xml
src/: color.c  draw.c  event.c  find.c  help.c  hit.c  init.c  light.c  main.c  normal.c
