cmake_minimum_required(VERSION 3.14)
set(CMAKE_C_STANDARD 99)
project(RTv1 C)
file(GLOB_RECURSE PROJ_SRC RELATIVE ${CMAKE_SOURCE_DIR} "src/*.c")
file(GLOB_RECURSE VEC_SRC RELATIVE ${CMAKE_SOURCE_DIR} "libvec/*.c")
file(GLOB_RECURSE XML_SRC RELATIVE ${CMAKE_SOURCE_DIR} "libXml/*.c")
file(GLOB_RECURSE LIBFT_SRC RELATIVE ${CMAKE_SOURCE_DIR} "lib/srcs/*.c")
include_directories("include")
include_directories("lib/includes")
include_directories("/Users/$ENV{USER}/Library/Frameworks/SDL2.framework/Versions/A/Headers/")
include_directories("/Users/$ENV{USER}/Library/Frameworks/SDL2_image.framework/Headers/")
add_executable(${CMAKE_PROJECT_NAME} ${PROJ_SRC} ${LIBFT_SRC} ${VEC_SRC} ${XML_SRC})
target_link_libraries(${CMAKE_PROJECT_NAME} "-F /Users/$ENV{USER}/Library/Frameworks/ -framework SDL2")
target_link_libraries(${CMAKE_PROJECT_NAME} "-F /Users/$ENV{USER}/Library/Frameworks/ -framework SDL2_image")